--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockPaperScissors</title>
-    <script src="../rockpaper/script.js"></script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+<div id = 'main'>
+    <h1>ROCK, PAPER, SCISSORS</h1>
+<div id = 'btnContainer'>
+    <button id = 'rock'>Rock</button>
+    <button id = 'paper'>Paper</button>
+    <button id = 'scissors'>Scissors</button>
+</div>
+<div id = 'resultContainer'>
+</div>
+<div id = 'scoreContainer'>
+</div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
