--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <button id = 'scissors'>Scissors</button>
 </div>
 <div id = 'resultContainer'>
+    <h2>SPIRIT</h2>
 </div>
 <div id = 'scoreContainer'>
+    <h2>SCORE</h2>
+    <div id = 'score'></div>
+    <div id = 'comScore'></div>
 </div>
 </div>
 <script src="script.js"></script>
