--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<div class = 'header'>
+    ROCK, PAPER, SCISSORS
+</div>
 <div id = 'main'>
-    <h1>ROCK, PAPER, SCISSORS</h1>
 <div id = 'btnContainer'>
-    <button id = 'rock'>Rock</button>
-    <button id = 'paper'>Paper</button>
-    <button id = 'scissors'>Scissors</button>
+    <button id = 'rock' class = 'button'>ROCK</button>
+    <button id = 'paper' class = 'button'>PAPER</button>
+    <button id = 'scissors' class = 'button'>SCISSORS</button>
 </div>
 <div id = 'resultContainer'>
     <h2>SPIRIT</h2>
@@ -23,6 +25,9 @@
     <div id = 'score'></div>
     <div id = 'comScore'></div>
 </div>
+</div>
+<div class = 'footer'>
+    The Rock Paper Scissors Project
 </div>
 <script src="script.js"></script>
 </body>
