clean code and restart button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div id = 'score'></div>
     <div id = 'comScore'></div>
 </div>
+<div id = 'reloadContainer'>
+    <button id = 'reload'>Reload?</button>
+</div>
 </div>
 <div class = 'footer'>
     The Rock Paper Scissors Project
